--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Vertical Hover Scale Elements with Filter</title>
+  <title>XKKIYA main page</title>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <style>
     html, body, .banner, .filter-bar, .filter-btn, .elements-wrap, .element-container, .element, .element-label, a {
