--- a/gamepages/aliensoldierjp.html
+++ b/gamepages/aliensoldierjp.html
@@ -19,7 +19,7 @@
             EJS_color = "#0064ff";
             EJS_startOnLoaded = true;
             EJS_pathtodata = "../data";
-            EJS_gameUrl = "../rombinary/Alien_Soldier_Japan.md";
+            EJS_gameUrl = "../rombinary/Alien_Soldier_Japan.md.zip";
         </script>
         <script src="../data/loader.js"></script>
     </body>
