--- a/index.html
+++ b/index.html
@@ -169,6 +169,27 @@
       <div class="element-label">Sunset Riders (USA)</div>
       <div class="element-label">Sunset Riders (JP)</div>
     </div>
+    <div class="element-container" data-category="Arcade">
+      <div class="element">
+        <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_hyperbbcjp.jpg">
+      </div>
+      <div class="element-label">Hyper Bishi Bashi Champ (Ver. EAA)</div>
+      <div class="element-label">Hyper Bishi Bashi Champ (Ver. JAA)</div>
+    </div>
+    <div class="element-container" data-category="Mega Drive">
+      <div class="element">
+        <img src="https://file.garden/aEYochToiQk-s_2n/thumb/md_rocketknightadv.jpg">
+      </div>
+      <div class="element-label">Rocket Knight Adventures (Japan)</div>
+      <div class="element-label">Rocket Knight Adventures (USA)</div>
+    </div>
+    <div class="element-container" data-category="SNES">
+      <div class="element">
+        <img src="https://file.garden/aEYochToiQk-s_2n/thumb/sfc_supbombermanjp.jpg">
+      </div>
+      <div class="element-label">Super Bomberman (Japan)</div>
+      <div class="element-label">Super Bomberman (USA)</div>
+    </div>
   </div>
   <script>
     const filterBtns = document.querySelectorAll('.filter-btn');
