--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
       font-family: 'Noto Sans JP', 'Noto Sans Japanese', 'Segoe UI', Arial, sans-serif !important;
     }
     body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-      background: #1e1e1e;
-      margin: 0;
-      gap: 40px 0;
-      padding-top: 70px;
-      background-image: url('https://www.transparenttextures.com/patterns/asfalt-light.png');
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  background: #1e1e1e;
+  margin: 0;
+  gap: 40px 0;
+  padding-top: 70px;
+  /* Grid tile background using CSS gradients */
+  background-image:
+    linear-gradient(rgba(255,255,255,0.06) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(255,255,255,0.06) 1px, transparent 1px);
+  background-size: 32px 32px;
   background-repeat: repeat;
-    }
+}
     .banner {
       position: fixed;
       top: 0;
@@ -31,7 +35,7 @@
       font-weight: bold;
       letter-spacing: 0.2em;
       text-align: center;
-      padding: 22px 0 10px 0;
+      padding: 18px 0 18px 0;
       z-index: 1000;
       box-shadow: 0 2px 12px rgba(0,0,0,0.18);
       user-select: none;
