--- a/gamepages/batriderjp.html
+++ b/gamepages/batriderjp.html
@@ -13,12 +13,12 @@
         </div>
         <script>
             EJS_player = "#game";
-            EJS_core = "segaMD";
-            EJS_gameName = "Alien Soldier (Japan)";
+            EJS_core = "arcade";
+            EJS_gameName = "Armed Police Batrider (B Version)";
             EJS_color = "#0064ff";
             EJS_startOnLoaded = true;
             EJS_pathtodata = "../data";
-            EJS_gameUrl = "../rombinary/Alien_Soldier_Japan.zip";
+            EJS_gameUrl = "../rombinary/batriderj.zip";
         </script>
         <script src="../data/loader.js"></script>
     </body>
