--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
     <button class="filter-btn" data-filter="Flash">Flash</button>
     <button class="filter-btn" data-filter="PC">PC</button>
   </div>
+  <p style="color: #ffffff">NOTE!! a lot of the games on here don't have their roms (or executables) implemented yet and are not playable. at some point all games will come with (hopefully) working roms.</p>
   <div class="games-wrap">
       <div class="game-container" data-category="Mega Drive">
       <div class="game-thumbnail">
