--- a/index.html
+++ b/index.html
@@ -261,6 +261,22 @@
         <a href="/gamepages/btoads.html" style="color:#ffffff;">Battletoads [Arcade]</a>
       </div>
     </div>
+    <div class="game-container" data-category="Arcade">
+      <div class="game-thumbnail">
+        <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_mamorukuncurse.jpg">
+      </div>
+      <div class="game-label">
+        <a href="#" style="color:#ffffff;" onclick="alert('forgot to add the romset lmao u gotta wait'); return false;">Mamoru-kun wa Norowarete Shimatta! [Naomi] (Japan)</a>
+      </div>
+    </div>
+    <div class="game-container" data-category="Arcade">
+      <div class="game-thumbnail">
+        <img src="https://file.garden/aEYochToiQk-s_2n/thumb/md_sparksterjp.jpg">
+      </div>
+      <div class="game-label">
+        <a href="#" style="color:#ffffff;" onclick="alert('forgot to add the rom lmao u gotta wait'); return false;">Sparkster [Mega Drive] (Japan)</a>
+      </div>
+    </div>
   </div>
   <script>
     const filterBtns = document.querySelectorAll('.filter-btn');
