--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
         <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_bgaregga.jpg">
       </div>
       <div class="game-label">
-        Battle Garegga
+        <a href="/gamepages/bgaregga.html" style="color:#ffffff;">Battle Garegga</a>
       </div>
       <div class="game-label">
-        Battle Garegga (Type 2)
+        <a href="/gamepages/bgareggat2.html" style="color:#ffffff;">Battle Garegga (Type 2)</a>
       </div>
       <div class="game-label">
-        Battle Garegga (Japan, Bootleg)
+        <a href="/gamepages/bgareggabljp.html" style="color:#ffffff;">Battle Garegga (Japan, Bootleg)</a>
       </div>
     </div>
     <div class="game-container" data-category="Arcade">
@@ -204,10 +204,10 @@
         <img src="https://file.garden/aEYochToiQk-s_2n/thumb/md_rocketknightadv.jpg">
       </div>
       <div class="game-label">
-        Rocket Knight Adventures (Japan)
+        <a href="/gamepages/rocketknightjp.html" style="color:#ffffff;">Rocket Knight Adventures (Japan)</a>
       </div>
       <div class="game-label">
-        Rocket Knight Adventures (USA)
+        <a href="/gamepages/rocketknightus.html" style="color:#ffffff;">Rocket Knight Adventures (USA)</a>
       </div>
     </div>
     <div class="game-container" data-category="SNES">
@@ -234,7 +234,7 @@
         <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_parodiusj.jpg">
       </div>
       <div class="game-label">
-        <a href="/gamepages/parodiusjp.html" style="color:#ffffff;">Parodius Da! (Japan)</a>
+        <a href="/gamepages/parodiusjp.html" style="color:#ffffff;">Parodius Da! [Arcade] (Japan)</a>
       </div>
     </div>
     <div class="game-container" data-category="PC">
@@ -269,7 +269,7 @@
         <a href="#" style="color:#ffffff;" onclick="alert('forgot to add the romset lmao u gotta wait'); return false;">Mamoru-kun wa Norowarete Shimatta! [Naomi] (Japan)</a>
       </div>
     </div>
-    <div class="game-container" data-category="Arcade">
+    <div class="game-container" data-category="Mega Drive">
       <div class="game-thumbnail">
         <img src="https://file.garden/aEYochToiQk-s_2n/thumb/md_sparksterjp.jpg">
       </div>
