--- a/gamepages/parodiusjp.html
+++ b/gamepages/parodiusjp.html
@@ -14,7 +14,7 @@
         <script>
             EJS_player = "#game";
             EJS_core = "arcade";
-            EJS_gameName = "Parodius Da! (Japan)";
+            EJS_gameName = "Parodius Da! [Arcade] (Japan)";
             EJS_color = "#0064ff";
             EJS_startOnLoaded = true;
             EJS_pathtodata = "../data";
