--- a/patchlog.html
+++ b/patchlog.html
@@ -52,7 +52,7 @@
   justify-content: center;
   flex-wrap: wrap;
   margin-top: 110px;
-  align-items: flex-start; /* Add this line */
+  align-items: flex-start;
 }
   .patchlog-container {
     background: #23272e;
