--- a/gamepages/hyperbbceea.html
+++ b/gamepages/hyperbbceea.html
@@ -16,7 +16,7 @@
                 alert("WARNING!! This game is currently incompitable with the FinalBurn Neo core, so don't be surprised if it doesn't work.");
             };
             EJS_player = "#game";
-            EJS_core = "arcade";
+            EJS_core = "mame2003";
             EJS_gameName = "Hyper Bishi Bashi Champ (VER. EAA)";
             EJS_color = "#0064ff";
             EJS_startOnLoaded = true;
