--- a/index.html
+++ b/index.html
@@ -242,10 +242,32 @@
                 <img src="https://file.garden/aEYochToiQk-s_2n/thumb/sfc_supbombermanjp.jpg">
             </div>
             <div class="game-label">
-                Super Bomberman (Japan)
+                <a href="/gamepages/supbombermanjp.html" style="color:#ffffff;">Super Bomberman (Japan)</a>
             </div>
             <div class="game-label">
-                Super Bomberman (USA)
+                <a href="/gamepages/supbombermanus.html" style="color:#ffffff;">Super Bomberman (USA)</a>
+            </div>
+        </div>
+        <div class="game-container" data-category="SNES">
+            <div class="game-thumbnail">
+                <img src="https://file.garden/aEYochToiQk-s_2n/thumb/sfc_supbomberman2jp.jpg">
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/supbomberman2jp.html" style="color:#ffffff;">Super Bomberman 2 (Japan)</a>
+            </div>
+            <div class="game-label">
+                Super Bomberman 2 (USA)
+            </div>
+        </div>
+        <div class="game-container" data-category="SNES">
+            <div class="game-thumbnail">
+                <img src="https://file.garden/aEYochToiQk-s_2n/thumb/sfc_supbomberman5jp.jpg">
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/supbomberman5jp.html" style="color:#ffffff;">Super Bomberman 5 (Japan)</a>
+            </div>
+            <div class="game-label">
+                Super Bomberman 2 (USA)
             </div>
         </div>
         <div class="game-container" data-category="Nintendo DS">
@@ -253,7 +275,7 @@
                 <img src="https://file.garden/aEYochToiQk-s_2n/thumb/nds_sonicrush.jpg">
             </div>
             <div class="game-label">
-                Sonic Rush (USA)
+                <a href="/gamepages/sonicrushus.html" style="color:#ffffff;">Sonic Rush (USA)</a>
             </div>
         </div>
         <div class="game-container" data-category="Arcade">
@@ -290,6 +312,62 @@
         </div>
         <div class="game-container" data-category="Arcade">
             <div class="game-thumbnail">
+                <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_mslug.jpg">
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/mslug1arc.html" style="color:#ffffff;">Metal Slug [Arcade]</a>
+            </div>
+        </div>
+        <div class="game-container" data-category="Arcade">
+            <div class="game-thumbnail">
+                <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_mslug2.jpg">
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/mslug2arc.html" style="color:#ffffff;">Metal Slug 2 [Arcade]</a>
+            </div>
+        </div>
+        <div class="game-container" data-category="Arcade">
+            <div class="game-thumbnail">
+                <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_mslugx.jpg">
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/mslugxarc.html" style="color:#ffffff;">Metal Slug X [Arcade]</a>
+            </div>
+        </div>
+        <div class="game-container" data-category="Arcade">
+            <div class="game-thumbnail">
+                <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_mslug3.jpg">
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/mslug3arc.html" style="color:#ffffff;">Metal Slug 3 [Arcade]</a>
+            </div>
+        </div>
+        <div class="game-container" data-category="Arcade">
+            <div class="game-thumbnail">
+                <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_mslug4us.jpg">
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/mslug4arc.html" style="color:#ffffff;">Metal Slug 4 [Arcade]</a>
+            </div>
+        </div>
+        <div class="game-container" data-category="Arcade">
+            <div class="game-thumbnail">
+                <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_mslug5-main.jpg">
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/mslug5arc.html" style="color:#ffffff;">Metal Slug 5 [Arcade]</a>
+            </div>
+        </div>
+        <div class="game-container" data-category="Arcade">
+            <div class="game-thumbnail">
+                <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_mslug6.jpg">
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/mslug6arc.html" style="color:#ffffff;">Metal Slug 6 [Arcade]</a>
+            </div>
+        </div>
+        <div class="game-container" data-category="Arcade">
+            <div class="game-thumbnail">
                 <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_mamorukuncurse.jpg">
             </div>
             <div class="game-label">
@@ -298,24 +376,94 @@
         </div>
         <div class="game-container" data-category="Mega Drive">
             <div class="game-thumbnail">
-                <img src="https://file.garden/aEYochToiQk-s_2n/thumb/md_sparksterjp.jpg">
+              <a href="/gamepages/sparkstermdjphtml">
+                    <img src="https://file.garden/aEYochToiQk-s_2n/thumb/md_sparksterjp.jpg">
+                </a>
             </div>
             <div class="game-label">
-                <a href="#" style="color:#ffffff;" onclick="alert('forgot to add the rom lmao u gotta wait'); return false;">Sparkster [Mega Drive] (Japan)</a>
+                <a href="/gamepages/sparkstermdjphtml" style="color:#ffffff;">Sparkster [Mega Drive] (Japan)</a>
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/sparkstermdus.html" style="color:#ffffff;">Sparkster [Mega Drive] (USA)</a>
+            </div>
+        </div>
+        <div class="game-container" data-category="Mega Drive">
+            <div class="game-thumbnail">
+              <a href="/gamepages/sparkstermdjphtml">
+                    <img src="https://file.garden/aEYochToiQk-s_2n/thumb/sfc_sparksterus.jpg">
+                </a>
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/sparkstersnesjp.html" style="color:#ffffff;">Sparkster [SNES] (Japan)</a>
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/sparkstersnesus.html" style="color:#ffffff;">Sparkster [SNES] (USA)</a>
             </div>
         </div>
         <div class="game-container" data-category="Arcade">
             <div class="game-thumbnail">
-                <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_ddonpachdaifuk.jpg">
+                <a href="/gamepages/ddonpachbl.html">
+                    <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_ddonpachdaifuk.jpg">
+                </a>
             </div>
             <div class="game-label">
-                <a href="/gamepages/ddonpachbl.html" style="color:#ffffff;">ddonp [Arcade]</a>
+                <a href="/gamepages/ddonpachbl.html" style="color:#ffffff;">DoDonPachi Daifukkatsu [Arcade]</a>
+            </div>
+        </div>
+        <div class="game-container" data-category="Arcade">
+            <div class="game-thumbnail">
+                <a href="/gamepages/spcinv95jp.html">
+                    <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_spcinv95.jpg">
+                </a>
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/spcinv95jp.html" style="color:#ffffff;">Space Invaders '95: Attack of Lunar Loonies (Japan)</a>
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/spcinv95us.html" style="color:#ffffff;">Space Invaders '95: Attack of Lunar Loonies (USA)</a>
+            </div>
+        </div>
+        <div class="game-container" data-category="Arcade">
+            <div class="game-thumbnail">
+                <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_sexyparo.jpg">
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/sexyparojp.html" style="color:#ffffff;">Sexy Parodius [Arcade] (Japan)</a>
+            </div>
+        </div>
+        <div class="game-container" data-category="Arcade">
+            <div class="game-thumbnail">
+                <a href="/gamepages/sorcstrikeus.html">
+                    <img src="https://file.garden/aEYochToiQk-s_2n/thumb/arc_sstrikerjp.jpg">
+                </a>
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/sorcstrikeus.html" style="color:#ffffff;">Sorcer Striker [Arcade] (USA)</a>
+            </div>
+            <div class="game-label">
+                <a href="/gamepages/sorcstrikejp.html" style="color:#ffffff;">Mahou Daisakusen [Arcade] (Japan)</a>
             </div>
         </div>
     </div>
+    <center><b style="color: #ffffff">! ALL GAMES ON THIS SITE BELONG TO THEIR RESPECTIVE OWNERS !<br>! CREDITS ARE LISTED ON GITHUB REPOSITORY !</b></center>
+    <br>
     <script>
         const filterBtns = document.querySelectorAll('.filter-btn');
         const containers = document.querySelectorAll('.game-container');
+        const countMap = {};
+        containers.forEach(el => {
+            const cat = el.getAttribute('data-category');
+            countMap[cat] = (countMap[cat] || 0) + 1;
+        });
+        const totalCount = containers.length;
+        filterBtns.forEach(btn => {
+            const filter = btn.getAttribute('data-filter');
+            if (filter === 'All') {
+                btn.textContent = `All (${totalCount})`;
+            } else {
+                btn.textContent = `${filter} (${countMap[filter] || 0})`;
+            }
+        });
 
         filterBtns.forEach(btn => {
             btn.addEventListener('click', () => {
