--- a/patchlog.html
+++ b/patchlog.html
@@ -55,7 +55,7 @@
   align-items: flex-start;
 }
   .patchlog-container {
-    background: #23272e;
+    background: #0000005f;
     color: #fff;
     padding: 24px 32px;
     border-radius: 10px;
@@ -89,6 +89,13 @@
       <img src="imgs/ezgif-5ead3f2e8a8dca.jpg">
       <p>god i have so much to do</p>
     </div>
+    <div class="patchlog-container">
+      <h2>6/10/25</h2> 
+      <h3>typical update</h3>
+      <p>polished up the ui a lil' bit, added a new category, added roms to the following games: Super Bomberman (Japan), (USA), Sonic Rush (USA), Sparkster [Mega Drive], and added a bunch of new games!</p>
+      <p>those being: Super Bomberman 2, 5, Metal Slug 1, 2, 3, 4, 5, 6 (not working), X, Sparkster [SNES], DoDonPachi, DoDonPachi Daifukkatsu, Space Invaders '95, Sexy Parodius (not working), and Sorcer Striker.</p>
+    </div>
+    <div cla
   </div>
 </body>
 </html>
