--- a/gamepages/ddonpachbl.html
+++ b/gamepages/ddonpachbl.html
@@ -18,7 +18,7 @@
             EJS_color = "#0064ff";
             EJS_startOnLoaded = true;
             EJS_pathtodata = "../data";
-            EJS_gameUrl = "http://127.0.0.1:8080/share/iKsHdC1D";
+            EJS_gameUrl = "../rombinary/dfkbl.zip";
         </script>
         <script src="../data/loader.js"></script>
     </body>
